<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Setting.Card"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_auth_with_user" />

        <Button
            android:id="@+id/auth_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/switch_user_button" />

    </LinearLayout>

    <LinearLayout
        style="@style/Setting.Card"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_clear_cache_label" />

        <Button
            android:id="@+id/clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/clear_cache_button" />
    </LinearLayout>

    <LinearLayout
        style="@style/Setting.Card"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_download_clear_image_preview" />

        <Switch
            android:id="@+id/switch_enable_clear_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:theme="@style/Default.Switch"/>

    </LinearLayout>
</LinearLayout>